objects/Schedule_Buttons__c/Schedule_Buttons__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Schedule Buttons</label>
</CustomObject>