objects/Schedule_Buttons__c/fields/Calendar_View_Button__c.field-meta.xml
<CustomField>
    <fullName>Calendar_View_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off Calendar View Button in Schedule page under the Job Detail Page</description>
    <label>Calendar View Button</label>
    <type>Checkbox</type>
</CustomField>