objects/Schedule_Buttons__c/fields/Campaign_Button__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off Campaign Button in Schedule page under the Job Detail Page</description>
    <label>Campaign Button</label>
    <type>Checkbox</type>
</CustomField>