objects/Schedule_Buttons__c/fields/Copy_Schedule_Button__c.field-meta.xml
<CustomField>
    <fullName>Copy_Schedule_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off Copy Schedule Button in Schedule page under the Job Detail Page</description>
    <label>Copy Schedule Button</label>
    <type>Checkbox</type>
</CustomField>