objects/Schedule_Buttons__c/fields/New_Time_Sheet_Entry_Button__c.field-meta.xml
<CustomField>
    <fullName>New_Time_Sheet_Entry_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off Time Sheet Entry Button in Schedule page under the Job Detail Page</description>
    <label>New Time Sheet Entry Button</label>
    <type>Checkbox</type>
</CustomField>