objects/Schedule_Buttons__c/fields/Old_Copy_Schedule_Button__c.field-meta.xml
<CustomField>
    <fullName>Old_Copy_Schedule_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off old Copy Schedule Button in Schedule page under the Job Detail Page</description>
    <label>Old Copy Schedule Button</label>
    <type>Checkbox</type>
</CustomField>