objects/Schedule_Buttons__c/fields/Old_Time_Sheet_Entry_Button__c.field-meta.xml
<CustomField>
    <fullName>Old_Time_Sheet_Entry_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off Old Time Sheet Button in Schedule page under the Job Detail Page</description>
    <label>Old_Time Sheet Entry Button</label>
    <type>Checkbox</type>
</CustomField>