objects/Schedule_Buttons__c/fields/Print_Client_Schedule_Button__c.field-meta.xml
<CustomField>
    <fullName>Print_Client_Schedule_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On and Off Print Client Schedule Button in Schedule page under the Job Detail Page</description>
    <label>Print Client Schedule Button</label>
    <type>Checkbox</type>
</CustomField>